<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Mootify</string>
    <string name="asunto" >Apuntes sobre la computadora, su definicion y funcionamiento.</string>
    <string name="cuerpo" >Una computadora o computador (del inglés computer y este del latín computare -calcular), también denominada ordenador (del francés ordinateur, y este del latín ordinator), es una máquina electrónica
                          que recibe y procesa datos para convertirlos en información útil. Una computadora es una colección de circuitos integrados y otros componentes relacionados que puede ejecutar con exactitud, rapidez y 
                          de acuerdo a lo indicado por un usuario o automáticamente por otro programa, una gran variedad de secuencias o rutinas de instrucciones que son ordenadas, organizadas y sistematizadas en función a una 
                          amplia gama de aplicaciones prácticas y precisamente determinadas, proceso al cual se le ha denominado con el nombre de programación y al que lo realiza se le llama programador. La computadora, además 
                          de la rutina o programa informático, necesita de datos específicos (a estos datos, en conjunto, se les conoce como "Input" en inglés o de entrada) que deben ser suministrados, y que son requeridos al 
                          momento de la ejecución, para proporcionar el producto final del procesamiento de datos, que recibe el nombre de "output" o de salida.</string>
    <string name="curso" >INFORMATICA A DISTANCIA.</string>
    <string name="description_delete" >Delete The Current Message.</string>
    <string name="description_filter" >Show A Determined kind Of Message.</string>
    <string name="description_itemlist_image" >Image Used To Show The QuickAction Menu.</string>
    <string name="description_logo" >Ude@ Logo</string>
    <string name="description_message" >Check New Messages From Ude@</string>
    <string name="description_save" >Save A Message Into The Device To Be Read Later.</string>
    <string name="description_share" >Share A Message Using Different Social Networks.</string>
    <string name="description_search" >A Simple A Refined Search.</string>
    <string name="fecha" >02/04/2012</string>
    <string name="institutional" >Ude@, Nuestra alma.</string>
    <string name="login" >Entrar</string>
    <string name="message_title" >RESULTADOS DE LA PRUEBA SABER</string>
    <string name="nada" ></string>
    <string name="opcion" >Opciones</string>
    <string name="password" >Password</string>
    <string name="separator" >A Simple ActionBar Separator.</string>
    <string name="user_name" >Mares User</string>
    <string name="remitente" >Carlos Henao</string>
    <string name="subject" >Inglés III</string>
    <string name="about">Acerca de la aplicación</string>
    <string name="preferences">Opciones</string>
    <string name="about_text">Aplicación desarrollada por el grupo CampusMovil</string>
    <string name="about_text1">Asesores: \n Juan Gabriel Gutírrez \nDanny Múnera Ramírez</string>
    <string name="about_text2">Estudiantes: \nAnderson Etiver Alvarez Giraldo: \nConsumo del servicio. \nEdwin Alejandro Taborda Marín: \nInterfaz gráfica. \nNeiber Padierna Pérez: \nBase de datos.</string>
    <string name="about_text3">Una aplicación desarrollada para el grupo Ude@ \nTodos los derechos reservados \nUniversidad de Antioquia \n2012</string>
    <string name="about_text_land">Aplicación desarrollada por el grupo CampusMovil</string>
    <string name="about_text1_land">Asesores: \n Juan Gabriel Gutírrez,  Danny Múnera Ramírez</string>
    <string name="about_text2_land">Estudiantes: \nAnderson Etiver Alvarez Giraldo: Consumo del servicio. \nEdwin Alejandro Taborda Marín: Interfaz gráfica. \nNeiber Padierna Pérez: Base de datos.</string>
    <string name="about_text3_land">Una aplicación desarrollada para el grupo Ude@ \nTodos los derechos reservados \nUniversidad de Antioquia \n2012</string>
    <string name="number_messages_title">Cantidad de mensajes</string>
    <string name="number_messages_summary">Numero de mensajes en la bandeja de entrada</string>
    <string name="user_name_title">Usuario</string>
    <string name="user_name_summary">Cambiar de usuario</string>
    <string name="password_title">Contraseña</string>
    <string name="password_summary">Cambiar de contraseña</string>
    <string name="search_title">Busqueda de mensaje</string>
    <string name="search_tip">Escriba alguna palabra relacionada</string>
</resources>