<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#000000">
    
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5sp"    
    android:text="@string/about_text"
    android:gravity="center"
    android:textSize="24sp">        
    </TextView>
    
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10sp"
    android:gravity="center"    
    android:text="@string/about_text1"
    android:textSize="20sp">        
    </TextView>
    
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="10sp"
    android:text="@string/about_text2"
    android:textSize="18sp">        
    </TextView>
    
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:gravity="center"
    android:text="@string/about_text3"
    android:textSize="14sp">        
    </TextView>  

</LinearLayout>