<?xml version="1.0" encoding="utf-8"?>
<!--
 Este diseño tiene la función de contener toda 
 la información que se va a mostrar al usuario. 
 Se compone de: Titulo del mensaje, remitente, 
 fecha de recepción, materia y cuerpo del mensaje.
-->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4sp"
    android:background="#2E2E2E" 
>
  <RelativeLayout
      android:id="@+id/encabezado"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"      
      android:paddingLeft="2sp"
      android:layout_marginTop="10sp"      
  >

    <TextView
        android:id="@+id/asunto"
        android:text="@string/asunto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:textStyle="bold"                 
    />
    
    <TextView
        android:id="@+id/remitente"
        android:text="@string/remitente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asunto" 
    />
    
    <TextView
        android:id="@+id/fecha"
        android:text="@string/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asunto"
        android:layout_alignParentRight="true" 
    />
    
    <TextView
        android:id="@+id/curso"
        android:text="@string/curso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remitente" 
    />
    
    
  </RelativeLayout>
    <TextView
        android:id="@+id/cuerpo_mensaje"
        android:layout_below="@id/encabezado"
        android:layout_marginTop="16sp"
        android:text="@string/cuerpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
               
    /> 

</RelativeLayout>