<?xml version="1.0" encoding="utf-8"?>
<!--
 Este diseño tiene la función de contener toda 
 la información que se va a mostrar al usuario. 
 Se compone de: Titulo del mensaje, remitente, 
 fecha de recepción, materia y cuerpo del mensaje.
-->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4sp"
    android:background="#1C1C1C" 
>
  <RelativeLayout
      android:id="@+id/encabezado"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"      
      android:paddingLeft="2sp"
      android:layout_marginTop="10sp"      
  >

    <TextView
        android:id="@+id/asunto"
        android:text="@string/asunto"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"        
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"        
        android:scrollHorizontally="true"        
        android:textColor="#ffffff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_marginRight="2sp"
                         
    />
    
    <TextView
        android:id="@+id/remitente"
        android:text="@string/remitente"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asunto" 
    />
    
    <TextView
        android:id="@+id/fecha"
        android:text="@string/fecha"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asunto"
        android:layout_alignParentRight="true" 
    />
    
    <TextView
        android:id="@+id/curso"
        android:text="@string/curso"
        android:textColor="#ffffff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remitente" 
    />
    
    
  </RelativeLayout>
   <ScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/encabezado"
       android:layout_marginTop="10sp"
   > 
    <TextView
        android:id="@+id/cuerpo_mensaje"        
        android:text="@string/cuerpo"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:lineSpacingMultiplier="1.3"               
    /> 
    </ScrollView>

</RelativeLayout>