<?xml version="1.0" encoding="utf-8"?>

<!--
    Este Este diseño tiene la función de proporcionarle al usuario
    las opciones para manipular el mensaje que actualmente está
    leyendo, las opciones son: compartir, guardar y borrar..
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/actionbar_background"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="1sp"
    android:paddingTop="1sp" >

    <ImageButton
        android:background="@drawable/animation_share_button"
        android:contentDescription="@string/description_share"
        android:layout_alignParentRight="true"
        android:id="@+id/share"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="onShare" />

    <ImageView
        android:contentDescription="@string/separator"
        android:id="@+id/separator3"
        android:src="@drawable/separator"
        android:layout_height="@dimen/actionbar_separator_height"
        android:layout_toLeftOf="@id/share"
        android:layout_width="@dimen/actionbar_separator_width" />

    <ImageView
        android:background="@drawable/actionbar_logo"
        android:contentDescription="@string/description_logo"
        android:id="@+id/Logo"
        android:layout_alignParentLeft="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
</RelativeLayout>
