<?xml version="1.0" encoding="utf-8"?>

<!-- 
    Este diseño es el encargado de contener los datos resumen
    de un mensaje: título del mensaje, materia.
    Este es el tipo de elemento que va a cargar el ListView
    para mostrar al usuario.
    También tiene un botón llamado ident con al cual vamos a desplegar
    el QuickAction Menú.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/fondoitemf"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:padding="3sp" >

    <TextView
        android:id="@+id/message_title"
        android:layout_height="21sp"
        android:layout_marginLeft="8sp"        
        android:layout_width="250sp"
        android:text="@string/message_title"
        android:textColor="@color/item_list_textcolor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/subject"
        android:layout_below="@id/message_title"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:layout_width="250sp"
        android:text="@string/subject"
        android:textColor="@color/item_list_textcolor"
        android:textSize="12sp" />

    <ImageButton
        android:background="@null"
        android:contentDescription="@string/description_itemlist_image"
        android:id="@+id/quickation_image"
        android:layout_alignParentRight="true"
        android:layout_height="35sp"
        android:layout_width="35sp"
        android:layout_marginTop="4sp"
        android:onClick="showQuickActionMenu"
        android:src="@drawable/item_list_drop" />
</RelativeLayout>